# atman

./: .gitignore  CHANGELOG.md  Cargo.toml  LANDING.md  LICENSE-APACHE  README.md  dist-workspace.toml  oranda.json
.github/workflows/: docs.yml  release.yml
crates/atman-cli/: Cargo.toml
crates/atman-cli/src/: init.rs  main.rs  migrate_source.rs  repl_completer.rs  suggest.rs  sync.rs
crates/atman-cli/tests/: cli.rs  cost_cli.rs  doctor_cli.rs  flow_cli.rs  flow_lint_cli.rs  flow_test_cli.rs  init_cli.rs  logs_stream_cli.rs  migrate_cli.rs  sync_cli.rs
crates/atman-cli/wix/: main.wxs
crates/atman-daemon/: Cargo.toml
crates/atman-daemon/src/: bootstrap.rs  config.rs  http.rs  lib.rs  main.rs  openapi.rs  pidfile.rs  prompt_bridge.rs  run.rs  state.rs  unix.rs
crates/atman-daemon/tests/: config.rs  http_auth.rs  http_openapi.rs  http_sse.rs  http_sse_query_token.rs  hunk_rendezvous.rs  multi_client.rs  pidfile.rs  pool.rs  prompt_broadcast.rs  rendezvous.rs  rpc.rs  run_flow.rs  unix_socket.rs
crates/atman-dsl/: Cargo.toml
crates/atman-dsl/examples/: parse.rs
crates/atman-dsl/src/: ast.rs  parse.rs  print.rs
crates/atman-dsl/tests/: contract.rs  destructure.rs  fix_until_test_passes.rs  message_nodes.rs  pipe.rs  retry_fallback.rs  roundtrip.rs  route_and_lifecycle.rs  watch.rs
crates/atman-proto/: Cargo.toml
crates/atman-proto/src/: lib.rs
crates/atman-runtime/: Cargo.toml
crates/atman-runtime/src/: approval.rs  compaction.rs  config_migration.rs  cost.rs  env.rs  error.rs  eval.rs  event.rs  event_writer.rs  exec.rs  executor.rs  flow_lint.rs  flow_meta.rs  flow_registry.rs  form.rs  fs_access.rs  git.rs  humanize.rs  hunk.rs  index.rs  injection.rs  injection_classifier.rs  lib.rs  lifecycle.rs  mcp.rs  message.rs  meta_commands.rs  migration.rs  model_registry.rs  nodegraph.rs  provider.rs  redact.rs  rendezvous.rs  safety.rs  sandbox.rs  session.rs  session_meta.rs  storage.rs  stream.rs  tool.rs  (+5 more)
crates/atman-runtime/src/memory/: confession.rs  goal.rs  mod.rs  plan.rs  spec.rs  todo.rs
crates/atman-runtime/src/providers/: anthropic.rs  mock.rs  mod.rs  openai.rs
crates/atman-runtime/src/tools/: agent_ctrl.rs  bash.rs  bash_bg.rs  form.rs  fs.rs  git.rs  git_ops.rs  hunk.rs  memory.rs  memory_stubs.rs  mod.rs  plan.rs  preview.rs  session.rs  sleep.rs  stdlib.rs  term.rs  test.rs  web.rs
crates/atman-runtime/tests/: agent_loop.rs  agent_spawn.rs  anthropic_streaming.rs  anthropic_wire_tools.rs  arithmetic_and_stdlib.rs  attachments.rs  auto_compaction.rs  bash_bg_e2e.rs  bash_gate.rs  checkpoint_replay.rs  compact_hook.rs  compact_replay.rs  context_budget.rs  context_compaction.rs  context_session.rs  context_truncated_event.rs  cost_events.rs  destructure_eval.rs  edit_and_verify_e2e.rs  event_seq.rs  executor.rs  fix_until_test_passes.rs  flow_cancel.rs  fs_edit_integration.rs  goal_injection.rs  history_tools.rs  hunk_apply_e2e.rs  injection_drain.rs  interjection_l2_restart.rs  interjection_levels.rs  llm_messages_kwarg.rs  look_into_e2e.rs  mcp_e2e.rs  mcp_http.rs  memory_anchors.rs  memory_and_truncation_flow.rs  memory_dsl.rs  memory_validation.rs  message_eval.rs  migration_e2e.rs  (+30 more)
crates/atman-tui/: Cargo.toml
crates/atman-tui/src/: app.rs  approval_bar.rs  boot_animation.rs  clipboard.rs  compact_review_modal.rs  completion.rs  form_modal.rs  highlight.rs  history.rs  history_search_modal.rs  input.rs  keys.rs  layout.rs  lib.rs  markdown.rs  output.rs  palette.rs  prompt_resolver.rs  session_switcher.rs  sidebar.rs  states.rs  status.rs  terminal_guard.rs  terminal_viewer_modal.rs  theme.rs  workflow_viewer_modal.rs
crates/atman-tui/tests/: boxed_hit_test.rs  fanout_horizontal.rs  workflow_approval_auto_expand.rs  workflow_preview.rs  workflow_render_bench.rs  workflow_render_snapshot.rs  workflow_viewer.rs
docs/: context-strategy.md  how-to-filter.md  quickstart.md
examples/: agent.at  edit_and_verify.at  hello.at  hunk_review.at  killer_demo.at  lark_mail_send.at  look_into.at  review_code.at  review_code_with_contract.at
examples/prompts/: code-review.md  edit.md  synthesize.md  verify.md
scripts/: build-site.sh
static/: atman-landing.css  typewriter.js
