[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["W-Mai"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
syn        = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote      = "1"
anyhow     = "1"
thiserror  = "2"

[profile.release]
lto = "thin"
codegen-units = 1
