[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["W-Mai"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
syn        = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote      = "1"
anyhow     = "1"
thiserror  = "2"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "process", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures    = "0.3"
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
eventsource-stream = "0.2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
