[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/atman-cli"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["W-Mai"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
syn        = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote      = "1"
anyhow     = "1"
thiserror  = "2"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "process", "time", "signal", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures    = "0.3"
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
htmd       = "0.5"
libc       = "0.2"
eventsource-stream = "0.2"
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
uuid       = { version = "1", features = ["v4", "v7", "serde"] }
chrono     = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap       = { version = "4", features = ["derive"] }
rustyline  = { version = "17", default-features = false, features = ["custom-bindings"] }
base64     = "0.22"
similar    = "2"
toml       = "0.9"
axum       = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
utoipa     = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
rusqlite   = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
regex      = "1"
blake3     = "1"
ignore     = "0.4"
git2       = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
terminal-colorsaurus = "1"

[profile.release]
lto = "thin"
codegen-units = 1
