[package]
name = "atman-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "atman command-line interface"

[[bin]]
name = "atman"
path = "src/main.rs"

[dependencies]
atman-dsl      = { path = "../atman-dsl" }
atman-runtime  = { path = "../atman-runtime" }
atman-daemon   = { path = "../atman-daemon" }
atman-proto    = { path = "../atman-proto" }
reqwest.workspace      = true
libc                   = "0.2"
clap.workspace         = true
tokio.workspace        = true
anyhow.workspace       = true
directories.workspace  = true
serde_json.workspace   = true
rustyline.workspace    = true
serde.workspace        = true
toml.workspace         = true
axum.workspace         = true
tower-http.workspace   = true

[dev-dependencies]
tempfile = "3"
