[package]
name = "atman-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = true
description = "atman command-line interface — AI coding agent runtime with a Turing-complete .at flow DSL"
repository = "https://github.com/W-Mai/atman"
homepage = "https://atman.run"
keywords = ["atman", "cli", "agent", "ai", "coding"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "9423FACA-635E-4F41-9BC3-CAE25ED07736"
path-guid = "92345BB1-0DC9-44A4-A476-5A8F26F1EA0E"
license = false
eula = false

[[bin]]
name = "atman"
path = "src/main.rs"

[dependencies]
atman-dsl      = { path = "../atman-dsl", version = "1.1.1" }
atman-runtime  = { path = "../atman-runtime", version = "1.1.1" }
atman-daemon   = { path = "../atman-daemon", version = "1.1.1" }
atman-proto    = { path = "../atman-proto", version = "1.1.1" }
atman-tui      = { path = "../atman-tui", version = "1.1.1" }
reqwest.workspace      = true
chrono.workspace       = true
futures.workspace      = true
libc                   = "0.2"
clap.workspace         = true
tokio.workspace        = true
anyhow.workspace       = true
serde_json.workspace   = true
rustyline.workspace    = true
serde.workspace        = true
similar.workspace      = true
base64.workspace       = true
toml.workspace = true
unicode-width = "0.2"
uuid.workspace = true
axum.workspace         = true
tower-http.workspace   = true

[dev-dependencies]
atman-runtime = { path = "../atman-runtime" }
atman-daemon = { path = "../atman-daemon" }
tokio-util.workspace = true
tempfile = "3"
