[package]
name = "atman-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "atman-daemon"
path = "src/main.rs"

[dependencies]
atman-proto = { path = "../atman-proto" }
atman-runtime = { path = "../atman-runtime" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-stream = "0.3"
axum.workspace = true
tower-http.workspace = true
uuid.workspace = true
chrono.workspace = true
directories.workspace = true
toml.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
