[package]
name = "atman-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = true
description = "atman headless daemon — Unix socket + HTTP SSE server for the atman AI coding agent"
homepage = "https://atman.run"
repository = "https://github.com/W-Mai/atman"
keywords = ["atman", "daemon", "server", "headless"]
categories = ["development-tools", "asynchronous"]

[[bin]]
name = "atman-daemon"
path = "src/main.rs"

[dependencies]
atman-proto = { path = "../atman-proto", version = "1.1.1" }
atman-runtime = { path = "../atman-runtime", version = "1.1.1" }
atman-dsl = { path = "../atman-dsl", version = "1.1.1" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-stream = "0.3"
axum.workspace = true
tower-http.workspace = true
utoipa.workspace = true
uuid.workspace = true
chrono.workspace = true
toml.workspace = true
libc = "0.2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
reqwest.workspace = true
