[package]
name = "atman-dsl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "atman flow DSL: parser, AST, pretty-printer"

[dependencies]
syn.workspace         = true
proc-macro2.workspace = true
quote.workspace       = true
anyhow.workspace      = true
thiserror.workspace   = true

[dev-dependencies]
