[package]
name = "atman-dsl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = true
description = "atman flow DSL: parser, AST, pretty-printer"
homepage = "https://atman.run"
repository = "https://github.com/W-Mai/atman"
keywords = ["atman", "dsl", "parser", "ast", "flow"]
categories = ["development-tools", "parsing"]

[dependencies]
syn.workspace         = true
proc-macro2.workspace = true
quote.workspace       = true
anyhow.workspace      = true
thiserror.workspace   = true

[dev-dependencies]
