[package]
name = "atman-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = true
description = "atman JSON-RPC 2.0 protocol types"
homepage = "https://atman.run"
repository = "https://github.com/W-Mai/atman"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
utoipa.workspace = true
