[package]
name = "atman-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = true
description = "atman JSON-RPC 2.0 protocol types for the headless daemon"
homepage = "https://atman.run"
repository = "https://github.com/W-Mai/atman"
keywords = ["atman", "json-rpc", "protocol", "rpc"]
categories = ["development-tools", "api-bindings"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
utoipa.workspace = true
