[package]
name = "atman-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "atman flow execution runtime: values, errors, executor"

[dependencies]
atman-dsl        = { path = "../atman-dsl" }
anyhow.workspace   = true
thiserror.workspace = true
