[package]
name = "atman-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "atman flow execution runtime: values, errors, executor"

[dependencies]
atman-dsl        = { path = "../atman-dsl" }
anyhow.workspace   = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
reqwest.workspace = true
htmd.workspace = true
libc.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
similar.workspace = true
rusqlite.workspace = true
regex.workspace = true
ignore.workspace = true
toml.workspace = true
blake3.workspace = true
git2.workspace = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
