[package]
name = "atman-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = true
description = "atman flow execution runtime: evaluator, tool dispatch, provider dispatch, executor, memory stores"
homepage = "https://atman.run"
repository = "https://github.com/W-Mai/atman"
keywords = ["atman", "runtime", "llm", "agent", "workflow"]
categories = ["development-tools", "asynchronous"]

[dependencies]
atman-dsl        = { path = "../atman-dsl", version = "1.1.1" }
anyhow.workspace   = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
reqwest.workspace = true
htmd.workspace = true
command-group.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
similar.workspace = true
rusqlite.workspace = true
regex.workspace = true
ignore.workspace = true
toml.workspace = true
blake3.workspace = true
git2.workspace = true
portable-pty.workspace = true
vt100.workspace = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
