[package]
name = "atman-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "atman TUI — ratatui-based REPL frontend"

[dependencies]
atman-runtime = { path = "../atman-runtime" }
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
