[package]
name = "atman-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "atman TUI — ratatui-based REPL frontend"

[dependencies]
atman-runtime = { path = "../atman-runtime" }
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde_json.workspace = true
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
terminal-colorsaurus.workspace = true
unicode-width = "0.2"
chrono.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
uuid.workspace = true
