[package]
name = "atman-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = true
description = "atman TUI — ratatui-based terminal frontend for the atman AI coding agent runtime"
homepage = "https://atman.run"
repository = "https://github.com/W-Mai/atman"
keywords = ["atman", "tui", "terminal", "ratatui"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
atman-runtime = { path = "../atman-runtime", version = "1.1.1" }
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
similar.workspace = true
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
terminal-colorsaurus.workspace = true
unicode-width = "0.2"
chrono.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
uuid.workspace = true
